<resources>
    <string name="app_name">品爵</string>
    <string name="login_activity_login">User Log In</string>
    <string name="login_activity_login_btn">LOGIN</string>
    <string name="login_activity_edittext_hint_username">Username</string>
    <string name="login_activity_edittext_hint_password">Password</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="login_activity_button_forgot_password"><u>Forgot Password?</u></string>
    <string name="login_activity_button_forgot_password_clickhere">Click Here</string>
    <string name="login_username_error">Name must be filled!</string>
    <string name="login_password_error">Password must be filled!</string>
    <string name="forgotpassword_activity_email">Email Address</string>
    <string name="forgotpassword_activity_edittext_email">Email</string>
    <string name="forgotpassword_activity_button_submit">SUBMIT</string>
    <string name="forgotpassword_email_error">Please Enter your email!</string>
    <string name="forgotpassword_email_invalid_error">Invalid Email Format!</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_record">Records</string>
    <string name="member_dashboard_textview_popular_trip">POPULAR TRIP</string>
    <string name="member_dashboard_eventstartdate">%s %s %s</string>
    <string name="member_dashboard_eventenddate">%s %s %s</string>
    <string name="no_event">No Event</string>
    <string name="Task_Cancelled">Task Cancelled</string>
    <string name="event_detail_title">Event Detail</string>
    <string name="event_detail_join_trip_bell">Press \'JOIN EVENT\' to make your payment.</string>
    <string name="event_detail_trip_detail_title">EVENT DETAILS</string>
    <string name="event_detail_join_trip">JOIN EVENT</string>
    <string name="event_detail_joined_status_false">Press \'JOIN EVENT\' to make your payment.</string>
    <string name="event_detail_confirm_join_trip">Confirm to join this event?\n You will be spending %s PTS for this booking</string>
    <string name="event_detail_is_joined">YOU\'VE JOINED</string>
    <string name="event_detail_trip_confirmed">JOIN EVENT CONFIRMED!</string>
    <string name="edit_profile_profile_title">PROFILE</string>
    <string name="edit_profile_fullname_title">Full Name</string>
    <string name="edit_profile_nickname_title">Nickname</string>
    <string name="edit_profile_save_profile">SAVE PROFILE</string>
    <string name="edit_profile_save_profile_success">ACCOUNT UPDATED!</string>
    <string name="edit_profile_change_password_current_password_title">Current Password</string>
    <string name="edit_profile_change_password_new_password_title">New Password</string>
    <string name="edit_profile_change_password_confirm_password_title">Confirm New Password</string>
    <string name="edit_profile_change_password_button">CHANGE PASSWORD</string>
    <string name="edit_profile_change_password_success">PASSWORD UPDATED!</string>
    <string name="qr_code_text">Scan This QR Code</string>
    <string name="my_booking_title">MY BOOKING</string>
    <string name="my_expired_booking_title">EXPIRED BOOKING</string>
    <string name="my_booking_eventstartdate">%s %s %</string>
    <string name="my_booking_eventenddate">%s %s %</string>
    <string name="booking_id">Booking No.</string>
    <string name="you_have_paid">&#160;you have paid&#160;</string>
    <string name="my_reservation_title">MY RESERVATION</string>
    <string name="reservation_title">RESERVATION</string>
    <string name="reservation_history_title">RESERVATION HISTORY</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_desc">If you have specific request which didn’t list in our services, you may contact our butler for enquiry.</string>
    <string name="transaction_report_title">MY TRANSACTIONS REPORT</string>
    <string name="transaction_report_type_title">Type</string>
    <string name="transaction_report_amount_title">Amount</string>
    <string name="transaction_report_remarks_title">Remarks</string>
    <string name="transaction_pts">PTS Transaction</string>
    <string name="transaction_credit">MYR Transaction</string>
    <string name="search_bar_hint">Key in ID No. to search</string>
    <string name="filter_all">All</string>
    <string name="filter_weekly">Weekly</string>
    <string name="filter_monthly">Monthly</string>
    <string name="filter_yearly">Yearly</string>
    <string name="transaction_date">Date</string>
    <string name="admin_topup">ADMIN-TOPUP</string>
    <string name="member_topup">ADMIN-TOPUP</string>
    <string name="merchant_payment">MERCHANT-PAYMENT</string>
    <string name="payment_full">PAYMENT-FULL</string>
    <string name="my_balance">My Balance</string>
    <string name="scan_qr_pay">Scan QR code to pay</string>
    <string name="confirm_pay">Confirm</string>
    <string name="cancel_pay">Cancel</string>
    <string name="Reservation_username_error">Username must be filled!</string>
    <string name="Reservation_username_Length_error">The length of Username should be at least 6 characters.</string>
    <string name="Reservation_name_error">Name must be filled!</string>
    <string name="Reservation_name_Length_error">The length of Name should be at least 6 characters.</string>
    <string name="Reservation_date_error">Date must be filled!</string>
    <string name="Reservation_time_error">Time must be filled!</string>
    <string name="Reservation_contact_error">Please user Malaysia phone number format!</string>
    <string name="Reservation_contact_Length_error">Incorrect contact number format!</string>
    <string name="success_pay_msg">Success, Thank You!</string>
    <string name="success_transfer_msg">Points Have Been Transfer To </string>
    <string name="news_notification">Notification</string>
    <string name="news_reminder">Reminder</string>
    <string name="nav_menu_memberQR">Member QR</string>
    <string name="nav_menu_inbox">Inbox</string>
    <string name="nav_menu_dashboard">Dashboard</string>
    <string name="nav_menu_account">Account</string>
    <string name="nav_menu_my_booking">My Booking</string>
    <string name="nav_menu_transactions_report">My Transactions Report</string>
    <string name="nav_menu_service">Services</string>
    <string name="nav_menu_butler_service">Butler Services</string>
    <string name="nav_menu_guide">Guide</string>
    <string name="nav_menu_benefit">Benefit</string>
    <string name="nav_menu_term_condition">Term &amp; Condition</string>
    <string name="nav_menu_logout">Logout</string>
    <string name="change_profile_title">Select Profile Image</string>
    <string name="storage_access_required">Required Storage Access in order to store your profile picture.</string>
    <string name="camera_access_required">Required Camera access in order to take profile picture.</string>
    <string name="camera_and_storage_access_required">Required Camera and Storage access in order to take profile picture.</string>
    <string name="warning_title">Warning</string>
    <string name="close_app_msg">Please click BACK again to exit</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="error_title">NOTICE</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="logout_confirmation">Are you sure to logout?</string>
    <string name="logout_title">LOGOUT</string>
    <string name="edittext_nickname_empty_error">Please Enter your name.</string>
    <string name="edit_profile_change_password_empty_error">Please enter your password.</string>
    <string name="edit_profile_change_password_invalid_error">The password should contain alphabetic and numeric characters. Min length (6) - Max Length (50)</string>
    <string name="edit_profile_change_password_current_password_error">Your current password was incorrect. </string>
    <string name="edit_profile_change_password_confirm_password_error">Confirm new password are not match with the new password field</string>
    <string name="error_1502">Incorrect username or password.</string>
    <string name="error_1503">This account has been temporarily suspended due to too many incorrect login attempts. Please try again after an hour.</string>
    <string name="error_1504">Your account has been temporarily suspended. Suspicious activity has been detected on your account and it has been suspended as a security precaution. Please contact support to unlock your account.</string>
    <string name="error_1506">Session expired. Please login again.</string>
    <string name="error_1509">A reset password link has been sent to you via email. You can follow that link to configure your new password. If the email does not arrive, please contact support.</string>
    <string name="error_1510">There is no account with the ID or email you provided.</string>
    <string name="error_1511">Your reset link expired after 2 hours or has already been used.</string>
    <string name="error_1512">Your password successfully reset. Please log in using your new password.</string>
    <string name="error_2501">Full Name cannot be empty.</string>
    <string name="error_2502">Email cannot be empty.</string>
    <string name="error_2503">Please select a Country.</string>
    <string name="error_2504">Please select a State/Province.</string>
    <string name="error_2505">Address cannot be empty.</string>
    <string name="error_2506">Phone cannot be empty.</string>
    <string name="error_2507">The length of Full Name should be 2 \- 80 characters.</string>
    <string name="error_2508">Please enter a valid address.</string>
    <string name="error_2509">Please enter a valid phone number.</string>
    <string name="error_2510">Please enter a valid email address.</string>
    <string name="error_2511">Current password cannot be empty.</string>
    <string name="error_2512">New password cannot be empty.</string>
    <string name="error_2513">Confirm password cannot be empty.</string>
    <string name="error_2514">Your current password was incorrect.</string>
    <string name="error_2515">New password and confirm password do not match.</string>
    <string name="error_2516">The length of password should be 6 \- 50 characters.</string>
    <string name="error_2517">The password should contain alphabetic and numeric characters.</string>
    <string name="error_2518">Email address already in use.</string>
    <string name="error_2519">Phone number already in use.</string>
    <string name="error_2520">Your profile has been updated successfully.</string>
    <string name="error_2521">Your password has been changed successfully.</string>
    <string name="error_2522">Your profile picture has been updated successfully.</string>
    <string name="error_3001">This trip is no longer available. It may have expired or been fully booked.</string>
    <string name="error_3501">You are not allow to join this trip due because it is only for {0} members.</string>
    <string name="error_3502">You have already joined this trip.</string>
    <string name="error_3503">You have successfully join the trip.</string>
    <string name="error_3504">Insufficient balance for this trip. Required: {0} (Available: {1}). Please contact support to topup your wallet.</string>
    <string name="error_3505">Payment failed. Your cash wallet has been frozen for security reason. Please contact support to activate your cash wallet.</string>
    <string name="success_title">Success</string>
    <string name="Ok">Ok</string>
    <string name="cancel">CANCEL</string>
    <string name="join_trip">JOIN EVENT</string>
    <string name="loading_please_wait">Loading...</string>
    <string name="new_version_found">New Version Found.\nPress OK to download and install now. </string>
    <string name="userrank_bronze">BRONZE</string>
    <string name="userrank_silver">SILVER</string>
    <string name="userrank_gold">GOLD</string>
</resources>