<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/newloginbackground"
        android:tint="#40000000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:paddingTop="15dp"
            android:paddingRight="25dp"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="230dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/newpingjuelogo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="35dp"
                android:text="@string/forgot_password_title"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email Address"
                android:textColor="@color/textview_sidebar"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/forgotpassword_activity_edittext_email"
                android:imeOptions="actionSend"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingBottom="20dp"
                android:textColor="#ffffff"
                android:textColorHint="@color/edittext_hint_username"
                android:theme="@style/CustomEditText" />

            <Button
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_login_style"
                android:onClick="button_forgot_password_onclick"
                android:text="@string/forgotpassword_activity_button_submit"
                android:textColor="@color/textview_sidebar"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>


</FrameLayout>