<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout_adapter_transactions_report_child"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recycler_transaction_report_child_expanded_outerline"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_bottom_left_right"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:stretchColumns="2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textview_transaction_type_title"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:gravity="center_vertical"
                android:text="@string/transaction_report_type_title"
                android:textColor="#ffd35c"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textview_transaction_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="TYPE"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textview_transaction_amount_title"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:gravity="center_vertical"
                android:text="@string/transaction_report_amount_title"
                android:textColor="#ffd35c"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textview_transaction_amount"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="Amount"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textview_transaction_remarks_title"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:gravity="center_vertical"
                android:text="@string/transaction_report_remarks_title"
                android:textColor="#ffd35c"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textview_transaction_description"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:text="Remarks"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>